Changed the file names to a more concise version

--- a/MainStudent.html
+++ b/MainStudent.html
@@ -5,7 +5,7 @@
     <!-- <meta name="viewport" content="initial-scale=1, width=device-width" /> --> 
     <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
     <title>Main Page Student View</title>
-    <link rel="stylesheet" href="MainPageStudentViewStyle.css" />
+    <link rel="stylesheet" href="MainStudentStyle.css" />
     <!-- <link rel="stylesheet" href="css/index.css" /> -->
     <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600&display=swap"/> -->
   </head>
