--- a/NavStudent.html
+++ b/NavStudent.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nav Bar</title>
-    <link rel="stylesheet" href="NavStyle.css">
+    <link rel="stylesheet" href="css/NavStyle.css">
 </head>
 <body>
     
