renamed custom CSS stylesheets. added bootstrap.

--- a/StatsView.html
+++ b/StatsView.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Student Statistics view</title>
-        <link rel="stylesheet" href="css/StatsViewStyle.css" />
+        <link rel="stylesheet" href="customCSS/StatsViewStyle.css" />
     </head>
     <body>
         <header>
