--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Welcome-Page</title>
     <link rel="stylesheet" href="./global.css" />
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="customCSS/index.css" />
     <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600&display=swap"/> -->
   </head>
 
