--- a/index.html
+++ b/index.html
@@ -6,29 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Welcome-Page</title>
     <link rel="stylesheet" href="./global.css" />
+    <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="customCSS/index.css" />
-    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600&display=swap"/> -->
   </head>
 
   <body>
     <div class="bg-image"></div>
     <header id="welcome-page" style="text-align: center;">
       <div class="bg-text" style="text-align: left";>
-        <h1 id="GradeView">Welcome to xyz <br> University GradeView</h1>
-        <h2 id="gradeManagement">grade management program</h2>
-      </div>
-      <a href="#" class="button" id="buttonContinue">Press here to continue</a>  
+        <h1 class="fw-bold mb-3" id="GradeView">Welcome to xyz <br> University GradeView</h1>
+        <h2 class="fw-bold fs-3 mb-3 text-uppercase" id="gradeManagement">grade management program</h2>
+      </div> 
+      <a class="btn btn-outline-dark btn-lg my-3 px-5" id="buttonContinue" href="login.html" role="button" type="link">
+        Press here to continue
+      </a>
     </header>
-
-
-    <script>
-      var buttonContinue = document.getElementById("buttonContinue");
-      if (buttonContinue) {
-        buttonContinue.addEventListener("click", function (e) {
-          // Send to page 02 (login) of project
-        });
-      }
-    </script>
-
   </body>
 </html>
