NavBar integrated to studentView

--- a/MainStudent.html
+++ b/MainStudent.html
@@ -5,19 +5,19 @@
     <!-- <meta name="viewport" content="initial-scale=1, width=device-width" /> --> 
     <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
     <title>Main Page Student View</title>
+    <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="customCSS/MainStudentStyle.css" />
-    <!-- <link rel="stylesheet" href="css/index.css" /> -->
-    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600&display=swap"/> -->
-  </head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>        
+</head>
 
+<header>
+    <script id="replace_with_navbar" src="nav.js"></script>
+    <p><br><br></p>
+</header>
   
   <body>
-    <header id="">
-        <h1 class="dashboard" id="dashboardTitle">
-        XYZ Dashboard
-        </h1>
-    </header>
-
     <div class="assessmentView">
         <table class="assessmentTable">
             <!--<caption>Assessments</caption>-->
@@ -96,5 +96,10 @@
         </table>
     </div>
 
+    <footer class="bg-dark text-center text-white">
+        <div class="text-center p-2 fixed-bottom" style="background-color: rgba(3, 23, 68, 0.932);">
+            <p></p>
+        </div>
+      </footer>
   </body>
 </html>
