--- a/login.html
+++ b/login.html
@@ -38,7 +38,7 @@
                         <p class="text-dark-50 mb-5">Please enter your login and password</p>
           
                         <div class="form-outline form-white mb-4">
-                          <input type="email" id="typeEmailX" class="form-control form-control-lg" required placeholder = "Username" />
+                          <input type="text" id="typeEmailX" class="form-control form-control-lg" required placeholder = "Username" />
                           <br>
                         </div>
           
@@ -80,4 +80,4 @@
     <script src="https://unpkg.com/@popperjs/core@2.4.0/dist/umd/popper.min.js"></script>
     <script src="js/bootstrap.js"></script>
 </body>
-    </html>
+</html>
