updated path for MainTeacher.css

--- a/MainTeacher.html
+++ b/MainTeacher.html
@@ -5,7 +5,7 @@
     <meta charset = "utf-8" />
     <meta name = "viewport" content = "initial-scale = 1, width=device-width" /> 
     <title> Main Page Teacher View </title>
-    <link rel = "stylesheet" href = "MainTeacher.css" />
+    <link rel = "stylesheet" href = "customCSS/MainTeacher.css" />
   </head>
 
   
