--- a/SeeTotals.html
+++ b/SeeTotals.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta name = "viewport" content = "initial-scale = 1, width=device-width" /> 
     <title> See Totals </title>
-    <link rel ="stylesheet" href ="SeeTotals.css">
+    <link rel ="stylesheet" href ="customCSS/SeeTotals.css">
  </head> 
 
  <body>
