--- a/participantView.html
+++ b/participantView.html
@@ -6,17 +6,22 @@
     <link rel="stylesheet" href="customCSS/participantViewStyle.css"/>
 </head>
 <body>
+    <!--
     <header id="">
         <h1 class="participants" id="participantsTitle">
             Class Participants View
         </h1>
+    </header>
+    -->
+    <header>
+        <script id="replace_with_navbar" src="nav.js"></script>
+        <p><br><br></p>
     </header>
 
     <div class="tableParticipantView">
         <table>
             <tr>
                 <th>First Name / Surname</th>
-
             </tr>
 
             <tr>
