last commit for today

--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
                         </div>
           
                         <div class="form-outline form-white mb-4">
-                          <input type="password" id="typePasswordX" class="form-control form-control-lg" required placeholder = "Password" name="password"/>
+                          <input type="password" id="typePasswordX" class="form-control form-control-lg" required placeholder = "Password" name="pwd"/>
                         </div>
 
                         <div class="form-check form-check-inline">
