--- a/NavTeacher.html
+++ b/NavTeacher.html
@@ -50,22 +50,7 @@
           </ul>
         </div>
         <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
-            <ul class="navbar-nav ms-auto d-flex align-items-center">
-                <li class="nav-item">
-                    <div class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Inbox
-                        </a>
-                      <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                        <li>
-                          <a class="dropdown-item" href="#">Some news</a>
-                        </li>
-                        <li>
-                          <a class="dropdown-item" href="#">Another news</a>
-                        </li>
-                      </ul>
-                    </div>
-                </li>
+            <ul class="navbar-nav ms-auto d-flex align-items-center">                
                 <li class="nav-item">
                     <div class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -76,10 +61,10 @@
                         </a>
                         <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
                             <li>
-                              <a class="dropdown-item" href="#">Some news</a>
+                              <a class="dropdown-item" href="#">Settings</a>
                             </li>
                             <li>
-                              <a class="dropdown-item" href="#">Another news</a>
+                              <a class="dropdown-item" href="#">Logout</a>
                             </li>
                           </ul>
                       </div>
