i lied this is the last one

--- a/MainTeacher.html
+++ b/MainTeacher.html
@@ -17,7 +17,7 @@
   
   <body>
     <header>
-        <script id="replace_with_navbar" src="nav.js"></script>
+        <script id="replace_with_navbar" src="customJS/nav.js"></script>
         <p><br><br></p>
     </header>
 
@@ -237,14 +237,6 @@
         </table>
         <br>
         <br> -->
-    <div>
-        <h2 id = "studentsSec"> Students Section </h2>
-    <br>
-        <div class = "studentSection">
-            <button id = "assignGrades"> Assign Grades </button>
-            <button id = "viewGrades"> view Grades </button>
-        </div>
-    </div>
 
     <footer class="bg-dark text-center text-white">
         <div class="text-center p-2 fixed-bottom" style="background-color: rgba(3, 23, 68, 0.932);">
