--- a/MainStudent.html
+++ b/MainStudent.html
@@ -16,7 +16,7 @@
 </head>
 
 <header>
-    <script id="replace_with_navbar" src="nav.js"></script>
+    <script id="replace_with_navbar" src="customJS/nav.js"></script>
     <p><br><br></p>
 </header>
   
