--- a/TeacherGrade.html
+++ b/TeacherGrade.html
@@ -127,6 +127,181 @@
                 <p class="fw-normal mb-1">6.5</p>
             </td>
           </tr>
+          <tr>
+            <td>                 
+                <div class="ms-3">
+                  <p class="fw mb-1">Marcus Haslow</p>
+                </div>
+            </td>
+            <td>
+              <p class="fw-normal mb-1">1237783</p>
+            </td>
+            <td>
+                <p class="fw-normal mb-1">2</p>
+            </td>
+            <td>
+                <p class="fw-normal mb-1">1</p>
+            </td>
+            <td>
+                <p class="fw-normal mb-1">1.5</p>
+            </td>
+            <td>
+                <p class="fw-normal mb-1">1.5</p>
+            </td>
+            <td>
+                <p class="fw-normal mb-1">6</p>
+            </td>
+        </tr>
+        <tr>
+            <td>                 
+                <div class="ms-3">
+                  <p class="fw mb-1">Kathleen Conover</p>
+                </div>
+            </td>
+            <td>
+              <p class="fw-normal mb-1">1234477</p>
+            </td>
+            <td>
+                <p class="fw-normal mb-1">2</p>
+            </td>
+            <td>
+                <p class="fw-normal mb-1">2</p>
+            </td>
+            <td>
+                <p class="fw-normal mb-1">2</p>
+            </td>
+            <td>
+                <p class="fw-normal mb-1">2</p>
+            </td>
+            <td>
+                <p class="fw-normal mb-1">8</p>
+            </td>
+        </tr>
+        <tr>
+            <td>                 
+                <div class="ms-3">
+                  <p class="fw mb-1">Abdul-Rauf Deeb</p>
+                </div>
+            </td>
+            <td>
+              <p class="fw-normal mb-1">1233455</p>
+            </td>
+            <td>
+                <p class="fw-normal mb-1">2</p>
+            </td>
+            <td>
+                <p class="fw-normal mb-1">1</p>
+            </td>
+            <td>
+                <p class="fw-normal mb-1">1</p>
+            </td>
+            <td>
+                <p class="fw-normal mb-1">2</p>
+            </td>
+            <td>
+                <p class="fw-normal mb-1">6</p>
+            </td>
+        </tr>
+        <tr>
+            <td>                 
+                <div class="ms-3">
+                  <p class="fw mb-1">Miranda Stewart</p>
+                </div>
+            </td>
+            <td>
+              <p class="fw-normal mb-1">1238765</p>
+            </td>
+            <td>
+                <p class="fw-normal mb-1">0.5</p>
+            </td>
+            <td>
+                <p class="fw-normal mb-1">2</p>
+            </td>
+            <td>
+                <p class="fw-normal mb-1">2</p>
+            </td>
+            <td>
+                <p class="fw-normal mb-1">1</p>
+            </td>
+            <td>
+                <p class="fw-normal mb-1">5.5</p>
+            </td>
+        </tr>
+        <tr>
+            <td>                 
+                <div class="ms-3">
+                  <p class="fw mb-1">Leon Arcouet</p>
+                </div>
+            </td>
+            <td>
+              <p class="fw-normal mb-1">1238436</p>
+            </td>
+            <td>
+                <p class="fw-normal mb-1">2</p>
+            </td>
+            <td>
+                <p class="fw-normal mb-1">2</p>
+            </td>
+            <td>
+                <p class="fw-normal mb-1">0</p>
+            </td>
+            <td>
+                <p class="fw-normal mb-1">1</p>
+            </td>
+            <td>
+                <p class="fw-normal mb-1">5</p>
+            </td>
+        </tr>
+        <tr>
+            <td>                 
+                <div class="ms-3">
+                  <p class="fw mb-1">Maria Pereira</p>
+                </div>
+            </td>
+            <td>
+              <p class="fw-normal mb-1">1236275</p>
+            </td>
+            <td>
+                <p class="fw-normal mb-1">0</p>
+            </td>
+            <td>
+                <p class="fw-normal mb-1">2</p>
+            </td>
+            <td>
+                <p class="fw-normal mb-1">1.5</p>
+            </td>
+            <td>
+                <p class="fw-normal mb-1">2</p>
+            </td>
+            <td>
+                <p class="fw-normal mb-1">5.5</p>
+            </td>
+        </tr>
+        <tr>
+            <td>                 
+                <div class="ms-3">
+                  <p class="fw mb-1">Zaid Barakat</p>
+                </div>
+            </td>
+            <td>
+              <p class="fw-normal mb-1">1239145</p>
+            </td>
+            <td>
+                <p class="fw-normal mb-1">1.5</p>
+            </td>
+            <td>
+                <p class="fw-normal mb-1">2</p>
+            </td>
+            <td>
+                <p class="fw-normal mb-1">2</p>
+            </td>
+            <td>
+                <p class="fw-normal mb-1">1</p>
+            </td>
+            <td>
+                <p class="fw-normal mb-1">6.5</p>
+            </td>
+        </tr>
         </tbody>
       </table>
       <div class="d-flex flex-row bd-highlight mb-3">
