added nav bar links

--- a/login.html
+++ b/login.html
@@ -54,7 +54,8 @@
                     </form>
           
                       <div>
-                        <p class="mb-0">Don't have an account? <a href="#!" class="text-dark-50 fw-bold">Sign Up</a>
+                        <p class="mb-0">Haven't registered your account?</p>
+                        <p><a href="#!" class="text-dark-50 fw-bold">Sign Up</a> with your provided ID 
                         </p>
                       </div>
           
