--- a/MainStudent.html
+++ b/MainStudent.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <!-- <meta name="viewport" content="initial-scale=1, width=device-width" /> --> 
-    <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
+    <meta name="viewport" content="initial-scale=1, width=device-width" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Main Page Student View</title>
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="customCSS/MainStudentStyle.css" />
