--- a/NavStudent.html
+++ b/NavStudent.html
@@ -23,13 +23,13 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav me-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home</span></a>
+              <a class="nav-link" href="MainStudent.html">Home</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Assessments</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Participants</a>
+                <a class="nav-link" href="participantView.html">Participants</a>
               </li>
           </ul>
         </div>
@@ -45,10 +45,10 @@
                         </a>
                         <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
                             <li>
-                              <a class="dropdown-item" href="#">Some news</a>
+                              <a class="dropdown-item" href="#">Settings</a>
                             </li>
                             <li>
-                              <a class="dropdown-item" href="#">Another news</a>
+                              <a class="dropdown-item" href="index.html">Logout</a>
                             </li>
                           </ul>
                       </div>
