--- a/NavTeacher.html
+++ b/NavTeacher.html
@@ -64,7 +64,7 @@
                               <a class="dropdown-item" href="#">Settings</a>
                             </li>
                             <li>
-                              <a class="dropdown-item" href="#">Logout</a>
+                              <a class="dropdown-item" href="index.html">Logout</a>
                             </li>
                           </ul>
                       </div>
