--- a/participantView.html
+++ b/participantView.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Class Participants View Page</title>
+    <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="customCSS/participantViewStyle.css"/>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" 
+    integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" 
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" 
+    integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
 </head>
 <body>
     <!--
@@ -14,7 +21,7 @@
     </header>
     -->
     <header>
-        <script id="replace_with_navbar" src="nav.js"></script>
+        <script id="replace_with_navbar" src="customJS/nav.js"></script>
         <p><br><br></p>
     </header>
 
