--- a/participantView.html
+++ b/participantView.html
@@ -14,7 +14,7 @@
     </header>
     -->
     <header>
-        <script id="replace_with_navbar" src="nav.js"></script>
+        <script id="replace_with_navbar" src="/customJS/nav.js" type="text/javascript"></script>
         <p><br><br></p>
     </header>
 
@@ -25,35 +25,47 @@
             </tr>
 
             <tr>
-                <td>Pop Smoke </td>
+                <td>Mark Wilson</td>
             </tr>
 
             <tr>
-                <td>Andrew Tate</td>
+                <td>Carla Canvas</td>
             </tr>
 
             <tr>
-                <td>Tristan Tate</td>
+                <td>Jeffrey Bottle</td>
             </tr>
 
             <tr>
-                <td>XXX Tentation</td>
+                <td>Marcus Haslow</td>
             </tr>
 
             <tr>
-                <td>Post Malone</td>
+                <td>Kathleen Conover</td>
             </tr>
 
             <tr>
-                <td>Jonathan Sins</td>
+                <td>Abdul-Rauf Deeb</td>
             </tr>
 
             <tr>
-                <td>Bruce Wayne</td>
+                <td>Miranda Stewart</td>
             </tr>
 
             <tr>
-                <td id="totalStudents">Total: 7 students</td>
+                <td>Leon Arcouet</td>
+            </tr>
+
+            <tr>
+                <td>Maria Pereira</td>
+            </tr>
+
+            <tr>
+                <td>Zaid Barakat</td>
+            </tr>
+
+            <tr>
+                <td id="totalStudents">Total: 10 students</td>
             </tr>
         </table>
     </div>
