--- a/TeacherGrade.html
+++ b/TeacherGrade.html
@@ -17,7 +17,7 @@
   
   <body>
     <header>
-        <script id="replace_with_navbar" src="nav.js"></script>
+        <script id="replace_with_navbar" src="customJS/nav.js"></script>
         <p><br><br></p>
     </header>
 
