--- a/AsseStudent.html
+++ b/AsseStudent.html
@@ -21,37 +21,33 @@
     </header>
 
     <table>
-        <tr>
-            <th>Student Name</th>
-        </tr>
 
         <tr>
             <th>Assessment Name</th>
             <th>Assessment Grade</th>
             <th>Number of Questions</th>
             <th>Assessment Weight</th>
-            <th>Submission Date</th>
         </tr>
 
         <tr>
             <td>Quiz 1</td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>10</td>
+            <td>4</td>
+            <td>5%</td>
         </tr>
 
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>Quiz 2</td>
+            <td>10</td>
+            <td>6</td>
+            <td>5%<td>
         </tr>
 
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>Quiz 3</td>
+            <td>10</td>
+            <td>10</td>
+            <td>8%</td>
         </tr>
 
     </table>
@@ -61,3 +57,4 @@
     <script src="js/bootstrap.js"></script>
 </body>
 </html>
+
