added more links href to participantView

--- a/NavTeacher.html
+++ b/NavTeacher.html
@@ -23,10 +23,17 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav me-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home</span></a>
+              <a class="nav-link" href="MainTeacher.html">Home</span></a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Assessments</a>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Assessments
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item" href="TeacherGrade.html">Quiz 1</a>
+                <a class="dropdown-item" href="TeacherGrade2.html">Quiz 2</a>
+                <a class="dropdown-item" href="TeacherGrade3.html">Quiz 3</a>
+              </div>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -42,9 +49,9 @@
                 Statistics
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="#">Assessment 1</a>
-                <a class="dropdown-item" href="#">Assessment 2</a>
-                <a class="dropdown-item" href="#">Assessment 3</a>
+                <a class="dropdown-item" href="#">Quiz 1</a>
+                <a class="dropdown-item" href="#">Quiz 2</a>
+                <a class="dropdown-item" href="#">Quiz 3</a>
               </div>
             </li>
           </ul>
