--- a/AsseStudent.html
+++ b/AsseStudent.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Student Assessments</title>
-    <link rel = "stylesheet" href = "customCSS/MainTeacher.css" />
+    <link rel = "stylesheet" href = "customCSS/AsseStudentStyle.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
           integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
@@ -16,34 +16,36 @@
         <script id="replace_with_navbar" src="customJS/nav.js"></script>
     </header>
 
-    <header>
+    <header id>
         <h1>Student Assessments</h1>
     </header>
 
+    <h3 id="studentName">Student Name</h3>
+
     <table>
 
-        <tr>
+        <tr class="headerRow">
             <th>Assessment Name</th>
             <th>Assessment Grade</th>
             <th>Number of Questions</th>
             <th>Assessment Weight</th>
         </tr>
 
-        <tr>
+        <tr class="row0">
             <td>Quiz 1</td>
             <td>10</td>
             <td>4</td>
             <td>5%</td>
         </tr>
 
-        <tr>
+        <tr class="row1">
             <td>Quiz 2</td>
             <td>10</td>
             <td>6</td>
             <td>5%<td>
         </tr>
 
-        <tr>
+        <tr class="row2">
             <td>Quiz 3</td>
             <td>10</td>
             <td>10</td>
