--- a/StatsView.html
+++ b/StatsView.html
@@ -8,7 +8,7 @@
     <body>
         <header>
             <h1 class="assessmentStatTitle">
-                Assessment
+                Quiz 1
             </h1>
         </header>
 
