teacherGrade links to stats

--- a/TeacherGrade.html
+++ b/TeacherGrade.html
@@ -305,9 +305,13 @@
         </tbody>
       </table>
       <div class="d-flex flex-row bd-highlight mb-3">
-         <button type="button" class="btn btn-primary btn-sm">Edit grades</button> <pre>   </pre>
-         <button type="button" class="btn btn-secondary btn-sm">View statistics</button> 
-
+         <td>
+            <a href="#">  <button type="button" class="btn btn-primary btn-sm">Edit grades</button></a>
+        </td>
+        <pre>  </pre>
+         <td>
+            <a href="StatsView.html">  <button type="button" class="btn btn-secondary btn-sm"> View statistics</button></a>
+        </td>
       </div>
      
     </div>
