--- a/NavStudent.html
+++ b/NavStudent.html
@@ -26,7 +26,7 @@
               <a class="nav-link" href="MainStudent.html">Home</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Assessments</a>
+              <a class="nav-link" href="AsseStudent.html">Assessments</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="participantView.html">Participants</a>
