--- a/NavTeacher.html
+++ b/NavTeacher.html
@@ -33,6 +33,8 @@
                 <a class="dropdown-item" href="TeacherGrade.html">Quiz 1</a>
                 <a class="dropdown-item" href="TeacherGrade2.html">Quiz 2</a>
                 <a class="dropdown-item" href="TeacherGrade3.html">Quiz 3</a>
+                <a class="dropdown-item" href="TeacherMidterm.html">Midterm</a>
+                <a class="dropdown-item" href="TeacherFinal.html">Final</a>
               </div>
             </li>
             <li class="nav-item dropdown">
