--- a/NavStudent.html
+++ b/NavStudent.html
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav me-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="MainStudent.html">Home</span></a>
+              <a class="nav-link" href="MainStudent.html"><span>Home</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="AsseStudent.html">Assessments</a>
@@ -55,7 +55,7 @@
                 </li>
             </ul>
         </div>
-      </nav>
+    </nav>
     
     <div style="padding:10px; margin-top:0px; background-color:#25355F; height:50px;">
     </div>
