--- a/AsseStudent.html
+++ b/AsseStudent.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset = "utf-8" />
+    <meta name = "viewport" content = "initial-scale = 1, width=device-width" />
     <title>Student Assessments</title>
-    <link rel = "stylesheet" href = "customCSS/AsseStudentStyle.css" />
+    <link rel="stylesheet" href="css/bootstrap.css" />
+    <link rel = "stylesheet" href = "customCSS/MainTeacher.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
           integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
@@ -11,52 +13,107 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"
             integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
 </head>
+
+
 <body>
-    <header>
-        <script id="replace_with_navbar" src="customJS/nav.js"></script>
-    </header>
+<header>
+    <script id="replace_with_navbar" src="customJS/nav.js"></script>
+    <p><br><br></p>
+</header>
 
-    <header id>
-        <h1>Student Assessments</h1>
-    </header>
+<header id = "">
+    <h1 class = "dashboard" id = "dashboardTitle">
+        Student Assessments
+    </h1>
+    <p></p>
+</header>
 
-    <h3 id="studentName">Student Name</h3>
+<div class="container p-5">
+    <div class="table-wrapper">
+        <div class="table-title">
+            <div class="row">
+                <div class="col-md-4 ms-auto"><h3>Student Name</h3></div>
+            </div>
+        </div>
 
-    <table>
+        <table class="table align-middle mb-5 bg-white table-bordered">
+            <thead class="bg-light">
+            <tr>
+                <th>Assessment Name</th>
+                <th>Weight</th>
+                <th># of questions</th>
+                <th>Grade</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>
+                    <div class="ms-3">
+                        <p class="fw-bold mb-1">Quiz 1</p>
+                        <p class="text-muted mb-0">Submitted 08/10/2022</p>
+                    </div>
+                </td>
+                <td>
+                    <p class="fw-normal mb-1">5%</p>
+                </td>
+                <td>
+                    <p class="fw-normal mb-1">4</p>
+                </td>
 
-        <tr class="headerRow">
-            <th>Assessment Name</th>
-            <th>Assessment Grade</th>
-            <th>Number of Questions</th>
-            <th>Assessment Weight</th>
-        </tr>
+                <td>
+                    <p class="fw-normal mb-1">100%</p>
+                </td>
 
-        <tr class="row0">
-            <td>Quiz 1</td>
-            <td>10</td>
-            <td>4</td>
-            <td>5%</td>
-        </tr>
+            </tr>
+            <tr>
 
-        <tr class="row1">
-            <td>Quiz 2</td>
-            <td>10</td>
-            <td>6</td>
-            <td>5%<td>
-        </tr>
+            <tr>
+                <td>
+                    <div class="ms-3">
+                        <p class="fw-bold mb-1">Quiz 2</p>
+                        <p class="text-muted mb-0">Submitted 22/10/2022</p>
+                    </div>
+                </td>
+                <td>
+                    <p class="fw-normal mb-1">5%</p>
+                </td>
+                <td>
+                    <p class="fw-normal mb-1">6</p>
+                </td>
 
-        <tr class="row2">
-            <td>Quiz 3</td>
-            <td>10</td>
-            <td>10</td>
-            <td>8%</td>
-        </tr>
+                <td>
+                    <p class="fw-normal mb-1">100%</p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <div class="ms-3">
+                        <p class="fw-bold mb-1">Quiz 3</p>
+                        <p class="text-muted mb-0">Submitted 05/11/2022</p>
+                    </div>
+                </td>
+                <td>
+                    <p class="fw-normal mb-1">8%</p>
+                </td>
+                <td>
+                    <p class="fw-normal mb-1">10</p>
+                </td>
 
-    </table>
+                <td>
+                    <p class="fw-normal mb-1">100%</p>
+                </td>
+            </tr>
+            <tr>
+            </tbody>
+        </table>
+    </div>
+</div>
 
-
-    <script src="https://unpkg.com/@popperjs/core@2.4.0/dist/umd/popper.min.js"></script>
-    <script src="js/bootstrap.js"></script>
+<footer class="bg-dark text-center text-white">
+    <div class="text-center p-2 fixed-bottom" style="background-color: rgba(3, 23, 68, 0.932);">
+        <p></p>
+    </div>
+</footer>
 </body>
 </html>
 
