--- a/StatsView.html
+++ b/StatsView.html
@@ -1,46 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Student Statistics view</title>
-        <link rel="stylesheet" href="customCSS/StatsViewStyle.css" />
-    </head>
-    <body>
-        <header>
-            <h1 class="assessmentStatTitle">
-                Quiz 1
-            </h1>
-        </header>
+<head>
+    <meta charset = "utf-8" />
+    <meta name = "viewport" content = "initial-scale = 1, width=device-width" />
+    <title>Student Statistics view</title>
+    <link rel="stylesheet" href="css/bootstrap.css" />
+    <link rel = "stylesheet" href = "customCSS/MainTeacher.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
+          integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"
+            integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
+</head>
 
-        <div class="tableStatView">
-            <table>
-                <tr>
-                    <th>Grade</th>
-                    <td id="gradeStatView"></td>
-                </tr>
 
-                <tr>
-                    <th>Class Average</th>
-                    <td id="classAvgStatView"></td>
-                </tr>
+<body>
+<header>
+    <script id="replace_with_navbar" src="customJS/nav.js"  type="text/javascript"></script>
+    <p><br><br></p>
+</header>
 
-                <tr>
-                    <th>Median Grade</th>
-                    <td id="medianGradeStatView"></td>
-                </tr>
+<header id = "">
+    <h1 class = "participants" id = "participantViewTitle">
+        Quiz 1
+    </h1>
+    <p></p>
+</header>
 
-                <tr>
-                    <th>Standard Deviation</th>
-                    <td id="standardDeviationStatView"></td>
-                </tr>
-
-                <tr>
-                    <th>Class Rank</th>
-                    <td id="classRankStatView"></td>
-                </tr>
-
-            </table>
+<div class="container p-5">
+    <div class="table-wrapper">
+        <div class="table-title">
+            <div class="row">
+                <div class="col-md-4 ms-auto"><h3>Student Name</h3></div>
+            </div>
         </div>
 
-    </body>
+        <table class="table align-middle mb-5 bg-white table-bordered">
+            <thead class="bg-light">
+            <tr>
+                <th>Grade</th>
+                <th>Class Average</th>
+                <th>Median Grade</th>
+                <th>Standard Deviation</th>
+                <th>Class Rank</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>
+                    <p class="fw-normal mb-1" id="grade">A Grade </p>
+                </td>
+
+                <td>
+                    <p class="fw-normal mb-1" id="classAvg">A Class Average</p>
+                </td>
+
+                <td>
+                    <p class="fw-normal mb-1" id="medianGrd">A Median Grade</p>
+                </td>
+
+                <td>
+                    <p class="fw-normal mb-1" id="sd">A Standard Deviation</p>
+                </td>
+
+                <td>
+                    <p class="fw-normal mb-1" id="classRank">A Class Rank</p>
+                </td>
+
+            </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
+
+<footer class="bg-dark text-center text-white">
+    <div class="text-center p-2 fixed-bottom" style="background-color: rgba(3, 23, 68, 0.932);">
+        <p></p>
+    </div>
+</footer>
+</body>
 </html>
