--- a/participantView.html
+++ b/participantView.html
@@ -1,83 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="initial-scale=1, width=device-width" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset = "utf-8" />
+    <meta name = "viewport" content = "initial-scale = 1, width=device-width" />
     <title>Class Participants View Page</title>
     <link rel="stylesheet" href="css/bootstrap.css" />
-    <link rel="stylesheet" href="customCSS/participantViewStyle.css"/>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" 
-    integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" 
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" 
-    integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>   
+    <link rel = "stylesheet" href = "customCSS/MainTeacher.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
+          integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"
+            integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
 </head>
+
+
 <body>
-    <!--
-    <header id="">
-        <h1 class="participants" id="participantsTitle">
-            Class Participants View
-        </h1>
-    </header>
-    -->
-    <header>
-        <script id="replace_with_navbar" src="/customJS/nav.js" type="text/javascript"></script>
-        <p><br><br></p>
-    </header>
+<header>
+    <script id="replace_with_navbar" src="customJS/nav.js"  type="text/javascript"></script>
+    <p><br><br></p>
+</header>
 
-    <div class="tableParticipantView">
-        <table>
+<header id = "">
+    <h1 class = "participants" id = "participantViewTitle">
+        Class Participants
+    </h1>
+    <p></p>
+</header>
+
+<div class="container p-5">
+    <div class="table-wrapper">
+        <div class="table-title">
+            <div class="row">
+                <div class="col-md-4 ms-auto"><h3>Class Name</h3></div>
+            </div>
+        </div>
+
+        <table class="table align-middle mb-5 bg-white table-bordered">
+            <thead class="bg-light">
             <tr>
-                <th>First Name / Surname</th>
+                <th>First Name/Surname</th>
+            </tr>
+            </thead>
+            <tbody>
+
+            <tr>
+                <td>
+                    <p class="fw-normal mb-1">Mark Wilson</p>
+                </td>
+            </tr>
+            <tr>
+
+            <tr>
+                <td>
+                    <p class="fw-normal mb-1">Carla Canvas</p>
+                </td>
             </tr>
 
             <tr>
-                <td>Mark Wilson</td>
+                <td>
+                    <p class="fw-normal mb-1">Jeffrey Bottle</p>
+                </td>
             </tr>
 
             <tr>
-                <td>Carla Canvas</td>
+                <td>
+                    <p class="fw-normal mb-1">Marcus Haslow</p>
+                </td>
             </tr>
 
             <tr>
-                <td>Jeffrey Bottle</td>
+                <td>
+                    <p class="fw-normal mb-1">Kathleen Conover</p>
+                </td>
             </tr>
 
             <tr>
-                <td>Marcus Haslow</td>
+                <td>
+                    <p class="fw-normal mb-1">Abdul-Rauf Deeb</p>
+                </td>
             </tr>
 
             <tr>
-                <td>Kathleen Conover</td>
+                <td>
+                    <p class="fw-normal mb-1">Miranda Stewart</p>
+                </td>
             </tr>
 
             <tr>
-                <td>Abdul-Rauf Deeb</td>
+                <td>
+                    <p class="fw-normal mb-1">Leon Arcouet</p>
+                </td>
             </tr>
 
             <tr>
-                <td>Miranda Stewart</td>
+                <td>
+                    <p class="fw-normal mb-1">Maria Pereira</p>
+                </td>
             </tr>
 
             <tr>
-                <td>Leon Arcouet</td>
+                <td>
+                    <p class="fw-normal mb-1">Zaid Barakat</p>
+                </td>
             </tr>
 
             <tr>
-                <td>Maria Pereira</td>
+                <td>
+                    <p class="fw-normal mb-1" id="totalStudents">Total: 10 students</p>
+                </td>
             </tr>
 
-            <tr>
-                <td>Zaid Barakat</td>
-            </tr>
-
-            <tr>
-                <td id="totalStudents">Total: 10 students</td>
-            </tr>
-
+            </tbody>
         </table>
     </div>
+</div>
+
+<footer class="bg-dark text-center text-white">
+    <div class="text-center p-2 fixed-bottom" style="background-color: rgba(3, 23, 68, 0.932);">
+        <p></p>
+    </div>
+</footer>
 </body>
 </html>
