--- a/MainStudent.html
+++ b/MainStudent.html
@@ -5,7 +5,7 @@
         <meta name = "viewport" content = "initial-scale = 1, width=device-width" />
         <title> Main Page Student View </title>
         <link rel="stylesheet" href="css/bootstrap.css" />
-        <link rel = "stylesheet" href = "customCSS/MainTeacher.css" />
+        <link rel = "stylesheet" href = "customCSS/MainStudentStyle.css" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
               integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
@@ -32,7 +32,7 @@
             <div class="table-wrapper">
                 <div class="table-title">
                     <div class="row">
-                        <div class="col-md-4 ms-auto"><h3>Student View</h3></div>
+                        <div class="col-md-4 ms-auto"><h3>Student Name</h3></div>
                     </div>
                 </div>
 
