fixed the issue of the nav bar not showing up

--- a/participantView.html
+++ b/participantView.html
@@ -5,7 +5,7 @@
     <meta name = "viewport" content = "initial-scale = 1, width=device-width" />
     <title>Class Participants View Page</title>
     <link rel="stylesheet" href="css/bootstrap.css" />
-    <link rel = "stylesheet" href = "customCSS/MainTeacher.css" />
+    <link rel = "stylesheet" href = "customCSS/participantViewStyle.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
           integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
@@ -107,7 +107,7 @@
 
             <tr>
                 <td>
-                    <p class="fw-normal mb-1" id="totalStudents">Total: 10 students</p>
+                    <p class="fw-normal mb-1" id="totalSt">Total: 10 students</p>
                 </td>
             </tr>
 
