added couple of files

--- a/StatsView.html
+++ b/StatsView.html
@@ -23,7 +23,7 @@
 
 <header id = "">
     <h1 class = "participants" id = "participantViewTitle">
-        Quiz 1
+        Assessment Name
     </h1>
     <p></p>
 </header>
