--- a/Assessments.html
+++ b/Assessments.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset = "utf-8" />
     <meta name = "viewport" content = "initial-scale = 1, width=device-width" /> 
-    <title> Main Page Teacher View </title>
+    <title> Assessments page </title>
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel = "stylesheet" href = "customCSS/MainTeacher.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" 
