updated a couple of things

--- a/MainStudent.html
+++ b/MainStudent.html
@@ -63,13 +63,13 @@
                         </td>
 
                         <td>
-                            <a href="TeacherGrade.html">
+                            <a href="GradeBreakdownStudent.html">
                                 <button type="button" class="btn btn-outline-dark add-new">Breakdown</button>
                             </a>
                         </td>
 
                         <td>
-                            <a href="TeacherGrade.html">
+                            <a href="StatsView.html">
                                 <button type="button" class="btn btn-outline-dark add-new">Statistics</button>
                             </a>
                         </td>
@@ -91,13 +91,13 @@
                         </td>
 
                         <td>
-                            <a href="TeacherGrade.html">
+                            <a href="GradeBreakdownStudent.html">
                                 <button type="button" class="btn btn-outline-dark add-new">Breakdown</button>
                             </a>
                         </td>
 
                         <td>
-                            <a href="TeacherGrade.html">
+                            <a href="StatsView.html">
                                 <button type="button" class="btn btn-outline-dark add-new">Statistics</button>
                             </a>
                         </td>
@@ -111,7 +111,7 @@
                         </td>
 
                         <td>
-                            <p class="fw-normal mb-1">8%</p>
+                            <p class="fw-normal mb-1">5%</p>
                         </td>
 
                         <td>
@@ -119,13 +119,69 @@
                         </td>
 
                         <td>
-                            <a href="TeacherGrade.html">
+                            <a href="GradeBreakdownStudent.html">
                                 <button type="button" class="btn btn-outline-dark add-new">Breakdown</button>
                             </a>
                         </td>
 
                         <td>
-                            <a href="TeacherGrade.html">
+                            <a href="StatsView.html">
+                                <button type="button" class="btn btn-outline-dark add-new">Statistics</button>
+                            </a>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            <div class="ms-3">
+                                <p class="fw-bold mb-1">Midterm</p>
+                            </div>
+                        </td>
+
+                        <td>
+                            <p class="fw-normal mb-1">35%</p>
+                        </td>
+
+                        <td>
+                            <p class="fw-normal mb-1">100%</p>
+                        </td>
+
+                        <td>
+                            <a href="GradeBreakdownStudent.html">
+                                <button type="button" class="btn btn-outline-dark add-new">Breakdown</button>
+                            </a>
+                        </td>
+
+                        <td>
+                            <a href="StatsView.html">
+                                <button type="button" class="btn btn-outline-dark add-new">Statistics</button>
+                            </a>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            <div class="ms-3">
+                                <p class="fw-bold mb-1">Final</p>
+                            </div>
+                        </td>
+
+                        <td>
+                            <p class="fw-normal mb-1">50%</p>
+                        </td>
+
+                        <td>
+                            <p class="fw-normal mb-1">100%</p>
+                        </td>
+
+                        <td>
+                            <a href="GradeBreakdownStudent.html">
+                                <button type="button" class="btn btn-outline-dark add-new">Breakdown</button>
+                            </a>
+                        </td>
+
+                        <td>
+                            <a href="StatsView.html">
                                 <button type="button" class="btn btn-outline-dark add-new">Statistics</button>
                             </a>
                         </td>
