updated a couple of things

--- a/MainStudent.html
+++ b/MainStudent.html
@@ -8,6 +8,7 @@
         <link rel = "stylesheet" href = "customCSS/MainStudentStyle.css" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
               integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
+        <link rel = "stylesheet" href = "customCSS/footer.css"/>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
                 integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"
@@ -192,10 +193,47 @@
             </div>
         </div>
 
+        <!--
         <footer class="bg-dark text-center text-white">
             <div class="text-center p-2 fixed-bottom" style="background-color: rgba(3, 23, 68, 0.932);">
-                <p></p>
+                <div class="inner_footer"></div>
             </div>
         </footer>
+        -->
+
+
+        <div class="footer">
+            <div class="text-center p-2 fixed-bottom" style="background-color: rgba(3, 23, 68, 0.932);">
+                <div class="inner_footer">
+                    <div class="logo_container">
+                        <img src="/img/huLogo.jpg">
+                    </div>
+                    <div class="footer_third">
+                        <h4>
+                            <p>
+                                Daria Denejkina<br/>
+                                Matthew Armstrong<br/>
+                                Aadil Ezzeddine<br/>
+                                Afaf Alanzarouti<br/>
+                                Jose Sanchez<br/>
+                            </p>
+                        </h4>
+                    </div>
+
+                    <div class="footer_third">
+                        <h4>
+                            <p>
+                                xyz<br/>
+                                <br/>
+                                University GradeView<br/>
+                                <br/>
+                                Grade Management Program<br/>
+                            </p>
+                        </h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </body>
 </html>
