--- a/MainTeacher.html
+++ b/MainTeacher.html
@@ -8,8 +8,10 @@
     <link rel = "stylesheet" href = "customCSS/MainTeacher.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" 
     integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
-      <link rel = "stylesheet" href = "customCSS/footer.css"/>
-      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    <link rel = "stylesheet" href = "customCSS/footer.css"/>
+      <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:wght@300;700&display=swap&effect=outline"> 
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
     integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" 
     integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>   
@@ -134,15 +136,23 @@
     </div>
 </div>
 
-    <div class="footer">
         <div class="text-center p-2 fixed-bottom" style="background-color: rgba(3, 23, 68, 0.932);">
             <div class="inner_footer">
                 <div class="logo_container">
-                    <img src="/img/huLogo.jpg">
+                    <img src="./img/logo3.png">
                 </div>
-                <div class="footer_third">
+                <div class="footer_middle">
                     <h4>
                         <p>
+                            TECH UNIVERSITY<br/>
+                            GradeView Management System<br/>
+                            Copyright<br/>
+                        </p>
+                    </h4>
+                </div>
+                <div class="footer_right">
+                    <h4>
+                        <p class="text-uppercase">
                             Daria Denejkina<br/>
                             Matthew Armstrong<br/>
                             Aadil Ezzeddine<br/>
@@ -151,20 +161,7 @@
                         </p>
                     </h4>
                 </div>
-
-                <div class="footer_third">
-                    <h4>
-                        <p>
-                            xyz<br/>
-                            <br/>
-                            University GradeView<br/>
-                            <br/>
-                            Grade Management Program<br/>
-                        </p>
-                    </h4>
-                </div>
             </div>
         </div>
-    </div>
   </body>
 </html>
