--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="initial-scale=1, width=device-width" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Welcome-Page</title>
-    <link rel="stylesheet" href="css/bootstrap.css" />
-    <link rel="stylesheet" href="customCSS/index.css" />
+    <link rel="stylesheet" href="./css/bootstrap.css" />
+    <link rel="stylesheet" href="./customCSS/index.css" />
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:wght@300;700&display=swap&effect=outline"> 
     <style>
